--- a/portfolio.html
+++ b/portfolio.html
@@ -65,21 +65,21 @@
     <ul class="list1">
       <li class="link">
         <a href="#">
-          <img src="./images/Banking_App_Interface_Concept.jpg" alt="App" width="360" height="300"/>
+          <img src="./images/Banking_App_Interface_Concept.png" alt="App" width="360" height="300"/>
         </a>
         <h2 class="list__description">Banking App Interface Concept</h2>
         <p class="p__description">App</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Cashless_Payment.jpg" alt="Payment" width="360" height="300"/>
+          <img src="./images/Cashless_Payment.png" alt="Payment" width="360" height="300"/>
         </a>
         <h2 class="list__description">Cashless Payment</h2>
         <p class="p__description">Marketing</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Meditation_App.jpg" alt="Meditation" width="360" height="300"/>
+          <img src="./images/Meditation_App.png" alt="Meditation" width="360" height="300"/>
         </a>
         <h2 class="list__description">Meditation App</h2>
         <p class="p__description">App</p></a>
@@ -88,21 +88,21 @@
     <ul class="list2">
       <li class="link">
         <a href="#">
-          <img src="./images/Taxi_Service.jpg" alt="Marketing" width="360" height="300"/>
+          <img src="./images/Taxi_Service.png" alt="Marketing" width="360" height="300"/>
         </a>
         <h2 class="list__description">Taxi Service</h2>
         <p class="p__description">Marketing</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Screen_Illustrations.jpg" alt="Illustrations" width="360" height="300"/>
+          <img src="./images/Screen_Illustrations.png" alt="Illustrations" width="360" height="300"/>
         </a>
         <h2 class="list__description">Screen Illustrations</h2>
         <p class="p__description">Design</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Online_Courses.jpg" alt="Courses" width="360" height="300"/>
+          <img src="./images/Online_Courses.png" alt="Courses" width="360" height="300"/>
         </a>
         <h2 class="list__description">Online Courses</h2>
         <p class="p__description">Marketing</p></a>
@@ -111,21 +111,21 @@
     <ul class="list3">
       <li class="link">
         <a href="#">
-          <img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram" width="360" height="300"/>
+          <img src="./images/Instagram_Stories_Concept.png" alt="Instagram" width="360" height="300"/>
         </a>
         <h2 class="list__description">Instagram Stories Concept</h2>
         <p class="p__description">Design</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Organic_Food.jpg" alt="Food" width="360" height="300"/>
+          <img src="./images/Organic_Food.png" alt="Food" width="360" height="300"/>
         </a>
         <h2 class="list__description">Organic Food</h2>
         <p class="p__description">Web Site</p></a>
       </li>
       <li class="link">
         <a href="#">
-          <img src="./images/Fresh_Coffee.jpg" alt="Coffee" width="360" height="300"/>
+          <img src="./images/Fresh_Coffee.png" alt="Coffee" width="360" height="300"/>
         </a>
         <h2 class="list__description">Fresh Coffee</h2>
         <p class="p__description">Web Site</p></a>
