--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <a class="logo__button" href="./index.html"><span class="logo">Web</span>Studio</a>
     <ul class="nav">
       <li>
-        <a class="nav__point" href="#">Studio</a>
+        <a class="nav__point" href="./index.html">Studio</a>
       </li>
       <li>
         <a class="nav__point" href="./portfolio.html">Portfolio</a>
