--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
 <header>
   <nav>
-    <a class="logo__button" href="./index.html"><span class="logo">Web</span>Studio</a>
+    <a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
     <ul class="nav">
       <li>
         <a class="nav__point" href="./index.html">Studio</a>
@@ -58,8 +58,6 @@
         <button class="button1" type="button">Marketing</button>
       </li>
     </ul>
-  </section>
-  <section>
     <ul class="list1">
       <li class="link">
         <a href="#">
