--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <nav>
-    	<a class="logo__button" href="./index.html"><span class="logo">Web</span>Studio</a>
+    	<a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
         <ul class="nav">
             <li>
                 <a class="nav__point" href="#">Studio</a>
