--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,17 @@
 </head>
 <body>
 <header>
-  <nav>
+  <nav class="list">
     <a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
-    <ul class="nav">
+    <ul class="navigation">
       <li>
-        <a class="nav__point" href="./index.html">Studio</a>
+        <a class="nav" href="./index.html">Studio</a>
       </li>
       <li>
-        <a class="nav__point" href="./portfolio.html">Portfolio</a>
+        <a class="nav" href="./portfolio.html">Portfolio</a>
       </li>
       <li>
-        <a class="nav__point" href="#">Contacts</a>
+        <a class="nav" href="#">Contacts</a>
       </li>
     </ul>
   </nav>
@@ -41,7 +41,7 @@
 <main>
   <section>
     <h1 hidden="">Buttons</h1>
-    <ul class="list">
+    <ul class="list__portfolio">
       <li>
         <button class="button1" type="button">All</button>
       </li>
