--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 <body>
 <header>
-    <nav>
+    <nav class="list">
     	<a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
-        <ul class="nav">
+        <ul class="navigation">
             <li>
-                <a class="nav__point" href="#">Studio</a>
+                <a class="nav" href="./index.html">Studio</a>
             </li>
             <li>
-                <a class="nav__point" href="./portfolio.html">Portfolio</a>
+                <a class="nav" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="nav__point" href="#">Contacts</a>
+                <a class="nav" href="#">Contacts</a>
             </li>
         </ul>
     </nav>
