--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,27 @@
 </head>
 <body>
 <header>
-  <nav class="list">
+  <nav>
     <a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
-    <ul class="navigation">
+    <ul class="nav">
       <li>
-        <a class="nav" href="./index.html">Studio</a>
+        <a class="list" href="./index.html">Studio</a>
       </li>
       <li>
-        <a class="nav" href="./portfolio.html">Portfolio</a>
+        <a class="list" href="./portfolio.html">Portfolio</a>
       </li>
       <li>
-        <a class="nav" href="#">Contacts</a>
+        <a class="list" href="#">Contacts</a>
       </li>
     </ul>
   </nav>
   <address>
     <ul class="contacts">
       <li>
-        <a class="nav__point" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </li>
       <li>
-        <a class="nav__point" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a class="list" href="tel:+110001111111">+11 (000) 111-11-11</a>
       </li>
     </ul>
   </address>
