--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <address>
         <ul class="contacts">
             <li> 
-    			<a class="nav__point" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    			<a class="nav" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="nav__point" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="nav" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
