--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@200&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&amp;family=Roboto:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>webstudio</title>
 </head>
 <body>
 <header>
     <nav>
-    	<a class="link" href="./index.html">Web<span class="logo">Studio</span></a>
+    	<a class="logo__button" href="./index.html"><span class="logo">Web</span>Studio</a>
         <ul class="nav">
             <li>
-                <a class="list" href="./index.html">Studio</a>
+                <a class="nav__point" href="#">Studio</a>
             </li>
             <li>
-                <a class="list" href="./portfolio.html">Portfolio</a>
+                <a class="nav__point" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="list" href="#">Contacts</a>
+                <a class="nav__point" href="#">Contacts</a>
             </li>
         </ul>
     </nav>
     <address>
         <ul class="contacts">
             <li> 
-    			<a class="list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    			<a class="nav__point" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="list" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="nav__point" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
