--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="">Studio</a>
             </li>
             <li>
-                <a href="">Portfolio</a>
+                <a href="./portfolio.html">Portfolio</a>
             </li>
             <li>
                 <a href="">Contacts</a>
