--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
     <nav> 
-        <a href="./index.html">WebStudio</a>
+        <a class="link" href="./index.html">Web<span class="link__part">Studio</span></a>
         <ul>
             <li>
                 <a href="">Studio</a>
