--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-    <nav> 
+    <nav class="list"> 
         <a class="link" href="./index.html">Web<span class="link__part">Studio</span></a>
         <ul>
             <li>
