--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-    <nav class="list"> 
+    <nav> 
         <a class="link" href="./index.html">Web<span class="link__part">Studio</span></a>
-        <ul>
+        <ul class="list">
             <li>
                 <a href="">Studio</a>
             </li>
