--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
     <header>
     <nav> 
-        <a class="link logo" href="./index.html">Web<span class="logo__part">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo__part">Studio</span></a>
         <ul class="list">
             <li>
-                <a class="link part" href="./index.html">Studio</a>
+                <a class="part link" href="./index.html">Studio</a>
             </li>
             <li>
-                <a class="link part" href="./portfolio.html">Portfolio</a>
+                <a class="part link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="link part" href="">Contacts</a>
+                <a class="part link" href="">Contacts</a>
             </li>
         </ul>
     </nav>
