--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             </li>
         </ul>
     </nav>
-    <address>
-        <ul>
+    <address class="contacts">
+        <ul class="list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="part link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a  href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="part link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
