--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="part1 link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="part link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="part1 link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
