--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <address class="contacts">
         <ul class="list">
             <li>
-                <a class="part1 link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="part__two link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="part1 link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <a class="part__two link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
