--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <a class="logo link" href="./index.html">Web<span class="logo__part">Studio</span></a>
         <ul class="list">
             <li>
-                <a class="part link" href="./index.html">Studio</a>
+                <a class="part__one link" href="./index.html">Studio</a>
             </li>
             <li>
-                <a class="part link" href="./portfolio.html">Portfolio</a>
+                <a class="part__one link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a class="part link" href="">Contacts</a>
+                <a class="part__one link" href="">Contacts</a>
             </li>
         </ul>
     </nav>
@@ -39,9 +39,9 @@
     </address>
 </header>
 <main>
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <section class="section__one">
+        <h1 class="section__one__title">Effective Solutions for Your Business</h1>
+        <button class="section__one__button" type="button">Order Service</button>
     </section>
     <section>
         <h2>Repository</h2>
