--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
         <h1 class="section__one__title">Effective Solutions for Your Business</h1>
         <button class="section__one__button" type="button">Order Service</button>
     </section>
-    <section>
+    <section class="section__two" hidden="">
         <h2>Repository</h2>
-        <ul>
+        <ul class="list">
             <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                <h3 class="section__two__menu__title">Strategy</h3>
+                <p class="section__two__menu__description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
             </li>
             <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <h3 class="section__two__menu__title">Punctuality</h3>
+                <p class="section__two__menu__description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <h3 class="section__two__menu__title">Diligence</h3>
+                <p class="section__two__menu__description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <h3 class="section__two__menu__title">Technologies</h3>
+                <p class="section__two__menu__description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
               </li>
         </ul>
     </section>
