--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <h1 class="section__one__title">Effective Solutions for Your Business</h1>
         <button class="section__one__button" type="button">Order Service</button>
     </section>
-    <section class="section__two" hidden="">
-        <h2>Repository</h2>
+    <section class="section__two">
+        <h2 hidden="">Repository</h2>
         <ul class="list">
             <li>
                 <h3 class="section__two__menu__title">Strategy</h3>
