--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="section__one__button" type="button">Order Service</button>
     </section>
     <section class="section__two">
-        <h2 hidden="">Repository</h2>
+        <h2 class="section__two__title" hidden="">Our advantages</h2>
         <ul class="list">
             <li>
                 <h3 class="section__two__menu__title">Strategy</h3>
