--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
               </li>
         </ul>
     </section>
-    <section>
-        <h2>What are we doing</h2>
-        <ul>
+    <section class="section__three">
+        <h2 class="section__three__title">What are we doing</h2>
+        <ul class="list">
             <li>
                 <img src="./images/imgComp.jpg" alt="desktop" width="360" height="300"/>
             </li>
