--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
             </li>
         </ul>
     </section>
-    <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+    <section class="section__four">
+        <h2 class="section__four__title">Our Team</h2>
+        <ul class="list">
+            <li class="section__four__part">
                 <img src="./images/imgMark.jpg" alt="Mark-Guerrero" width="264" height="260"/>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="section__four__part__title">Mark Guerrero</h3>
+                <p class="section__four__part__description">Product Designer</p>
             </li>
-            <li>
+            <li class="section__four__part">
                 <img src="./images/imgFord.jpg" alt="Tom-Ford" width="264" height="260"/>
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="section__four__part__title">Tom Ford</h3>
+                <p class="section__four__part__description">Frontend Developer</p>
             </li>
-            <li>
+            <li class="section__four__part">
                 <img src="./images/imgCamila.jpg" alt="Camila-Garcia" width="264" height="260"/>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="section__four__part__title">Camila Garcia</h3>
+                <p class="section__four__part__description">Marketing</p>
             </li>
-            <li>
+            <li class="section__four__part">
                 <img src="./images/imgDaniel.jpg" alt="Daniel-Wilson" width="264" height="260"/>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="section__four__part__title">Daniel Wilson</h3>
+                <p class="section__four__part__description">UI Designer</p>
             </li>
         </ul>
     </section>
