--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </ul>
     </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+        <a class="footer__logo link" href="./index.html">Web<span class="footer__logo__part">Studio</span></a>
         <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
     </footer>
 </body>
