--- a/portfolio.html
+++ b/portfolio.html
@@ -4,136 +4,111 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@200&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&amp;family=Roboto:wght@400;500;700;900&amp;display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com/">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+  <link href="./WebStudio_files/css2" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <title>webstudio</title>
 </head>
 <body>
-<header>
-  <nav>
-    <a class="logo__button" href="./index.html"><span class="logo">Web</span>Studio</a>
-    <ul class="nav">
-      <li>
-        <a class="nav__point" href="./index.html">Studio</a>
-      </li>
-      <li>
-        <a class="nav__point" href="./portfolio.html">Portfolio</a>
-      </li>
-      <li>
-        <a class="nav__point" href="#">Contacts</a>
-      </li>
-    </ul>
-  </nav>
-  <address>
-    <ul class="contacts">
-      <li>
-        <a class="nav__point" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </li>
-      <li>
-        <a class="nav__point" href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </li>
-    </ul>
-  </address>
-</header>
-<main>
-  <section>
-    <h1 hidden="">Buttons</h1>
-    <ul class="list">
-      <li>
-        <button class="button1" type="button">All</button>
-      </li>
-      <li>
-        <button class="button1" type="button">Web Site</button>
-      </li>
-      <li>
-        <button class="button1" type="button">App</button>
-      </li>
-       <li>
-        <button class="button1" type="button">Design</button>
-      </li>
-      <li>
-        <button class="button1" type="button">Marketing</button>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <ul class="list1">
-      <li class="link">
-        <a href="#">
-          <img src="./images/Banking_App_Interface_Concept.png" alt="App" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Banking App Interface Concept</h2>
-        <p class="p__description">App</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Cashless_Payment.png" alt="Payment" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Cashless Payment</h2>
-        <p class="p__description">Marketing</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Meditation_App.png" alt="Meditation" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Meditation App</h2>
-        <p class="p__description">App</p></a>
-      </li>
-    </ul>
-    <ul class="list2">
-      <li class="link">
-        <a href="#">
-          <img src="./images/Taxi_Service.png" alt="Marketing" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Taxi Service</h2>
-        <p class="p__description">Marketing</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Screen_Illustrations.png" alt="Illustrations" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Screen Illustrations</h2>
-        <p class="p__description">Design</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Online_Courses.png" alt="Courses" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Online Courses</h2>
-        <p class="p__description">Marketing</p></a>
-      </li>
-    </ul>
-    <ul class="list3">
-      <li class="link">
-        <a href="#">
-          <img src="./images/Instagram_Stories_Concept.png" alt="Instagram" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Instagram Stories Concept</h2>
-        <p class="p__description">Design</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Organic_Food.png" alt="Food" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Organic Food</h2>
-        <p class="p__description">Web Site</p></a>
-      </li>
-      <li class="link">
-        <a href="#">
-          <img src="./images/Fresh_Coffee.png" alt="Coffee" width="360" height="300"/>
-        </a>
-        <h2 class="list__description">Fresh Coffee</h2>
-        <p class="p__description">Web Site</p></a>
-      </li>
-    </ul>
-  </section>
-</main>
-<footer>
-  <a class="logo__button2" href="#"><span class="logo">Web</span>Studio</a>
-  <p class="footer__desription">Increase the flow of customers and<br>sales for your business with digital<br>marketing &amp; growth solutions.</p>
-</footer>
+  <header>
+    <nav> 
+      <a class="logo link" href="./index.html">Web<span class="logo__part">Studio</span></a>
+      <ul class="list">
+        <li>
+          <a class="part__one link" href="./index.html">Studio</a>
+        </li>
+        <li>
+          <a class="part__one link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li>
+          <a class="part__one link" href="">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <address class="contacts">
+      <ul class="list">
+        <li>
+          <a class="part__two link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a class="part__two link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+  </header>
+  <main>
+    <section>
+      <h1 hidden="">Buttons</h1>
+      <ul class="list">
+        <li>
+          <button type="button">All</button>
+        </li>
+        <li>
+          <button type="button">Web Site</button>
+        </li>
+        <li>
+          <button type="button">App</button>
+        </li>
+        <li>
+          <button type="button">Design</button>
+        </li>
+        <li>
+          <button type="button">Marketing</button>
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <a href="#"><img src="./" alt="Bank" width="360" height="300">
+          <h2>Banking App Interface Concept</h2>
+          <p>App</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Payment" width="360" height="300">
+          <h2>Cashless Payment</h2>
+          <p>Marketing</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Meditation" width="360" height="300">
+          <h2>Meditation App</h2>
+          <p>App</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Marketing" width="360" height="300">
+          <h2>Taxi Service</h2>
+          <p>Marketing</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Illustrations" width="360" height="300">
+          <h2>Screen Illustrations</h2>
+          <p>Design</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Courses" width="360" height="300">
+          <h2>Online Courses</h2>
+          <p>Marketing</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Instagram" width="360" height="300">
+          <h2>Instagram Stories Concept</h2>
+          <p>Design</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Food" width="360" height="300">
+          <h2>Organic Food</h2>
+          <p>Web Site</p></a>
+        </li>
+        <li>
+          <a href="#"><img src="./" alt="Coffee" width="360" height="300">
+          <h2>Fresh Coffee</h2>
+          <p>Web Site</p></a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="footer__logo link" href="./index.html">Web<span class="footer__logo__part">Studio</span></a>
+    <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
+  </footer>
 </body>
 </html>
