--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
       <h1 hidden="">Buttons</h1>
       <ul class="list">
         <li>
-          <button type="button">All</button>
+          <button class="portfolio__button" type="button">All</button>
         </li>
         <li>
           <button type="button">Web Site</button>
