--- a/portfolio.html
+++ b/portfolio.html
@@ -46,16 +46,16 @@
           <button class="portfolio__button" type="button">All</button>
         </li>
         <li>
-          <button type="button">Web Site</button>
+          <button class="portfolio__button" type="button">Web Site</button>
         </li>
         <li>
-          <button type="button">App</button>
+          <button class="portfolio__button" type="button">App</button>
         </li>
         <li>
-          <button type="button">Design</button>
+          <button class="portfolio__button" type="button">Design</button>
         </li>
         <li>
-          <button type="button">Marketing</button>
+          <button class="portfolio__button" type="button">Marketing</button>
         </li>
       </ul>
       <ul class="list">
