--- a/portfolio.html
+++ b/portfolio.html
@@ -60,49 +60,49 @@
       </ul>
       <ul class="list">
         <li>
-          <a href="#"><img src="./" alt="Bank" width="360" height="300">
-          <h2>Banking App Interface Concept</h2>
-          <p>App</p></a>
+          <a class="link" href="#"><img src="./images/Banking_App_Interface_Concept.jpg" alt="Bank" width="360" height="300">
+          <h2 class="portfolio__title">Banking App Interface Concept</h2>
+          <p class="portfolio__description">App</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Payment" width="360" height="300">
-          <h2>Cashless Payment</h2>
-          <p>Marketing</p></a>
+          <a class="link" href="#"><img src="./images/Cashless_Payment.jpg" alt="Payment" width="360" height="300">
+          <h2 class="portfolio__title">Cashless Payment</h2>
+          <p class="portfolio__description">Marketing</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Meditation" width="360" height="300">
-          <h2>Meditation App</h2>
-          <p>App</p></a>
+          <a class="link" href="#"><img src="./images/Meditation_App.jpg" alt="Meditation" width="360" height="300">
+          <h2 class="portfolio__title">Meditation App</h2>
+          <p class="portfolio__description">App</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Marketing" width="360" height="300">
-          <h2>Taxi Service</h2>
-          <p>Marketing</p></a>
+          <a class="link" href="#"><img src="./images/Taxi_Service.jpg" alt="Marketing" width="360" height="300">
+          <h2 class="portfolio__title">Taxi Service</h2>
+          <p class="portfolio__description">Marketing</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Illustrations" width="360" height="300">
-          <h2>Screen Illustrations</h2>
-          <p>Design</p></a>
+          <a class="link" href="#"><img src="./images/Screen_Illustrations.jpg" alt="Illustrations" width="360" height="300">
+          <h2 class="portfolio__title">Screen Illustrations</h2>
+          <p class="portfolio__description">Design</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Courses" width="360" height="300">
-          <h2>Online Courses</h2>
-          <p>Marketing</p></a>
+          <a class="link" href="#"><img src="./images/Online_Courses.jpg" alt="Courses" width="360" height="300">
+          <h2 class="portfolio__title">Online Courses</h2>
+          <p class="portfolio__description">Marketing</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Instagram" width="360" height="300">
-          <h2>Instagram Stories Concept</h2>
-          <p>Design</p></a>
+          <a class="link" href="#"><img src="./images/Instagram_Stories_Concept.jpg" alt="Instagram" width="360" height="300">
+          <h2 class="portfolio__title">Instagram Stories Concept</h2>
+          <p class="portfolio__description">Design</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Food" width="360" height="300">
-          <h2>Organic Food</h2>
-          <p>Web Site</p></a>
+          <a class="link" href="#"><img src="./images/Organic_Food.jpg" alt="Food" width="360" height="300">
+          <h2 class="portfolio__title">Organic Food</h2>
+          <p class="portfolio__description">Web Site</p></a>
         </li>
         <li>
-          <a href="#"><img src="./" alt="Coffee" width="360" height="300">
-          <h2>Fresh Coffee</h2>
-          <p>Web Site</p></a>
+          <a class="link" href="#"><img src="./images/Fresh_Coffee.jpg" alt="Coffee" width="360" height="300">
+          <h2 class="portfolio__title">Fresh Coffee</h2>
+          <p class="portfolio__description">Web Site</p></a>
         </li>
       </ul>
     </section>
